
	* Explicitly made various functions return void in lm3g2dmp
	  and cleaned up all the warnings.

-------------------------------------------------------------------------------

2001-01-26  David Huggins-Daines  <dhd@cepstral.com>

	* src/examples/Makefile.am: Add things to INCLUDES to allow
	building in a separate dir (due to autogenerated ad.h)
	* src/libsphinx2ad/Makefile.am: Likewise.
	* src/libsphinx2fe/Makefile.am: Likewise.
	* src/libsphinx2/Makfile.am: Likewise.  Also add logmsg.c.
	* src/libsphinx2/include/Makfile.am: Add logmsg.h.

	* src/libsphinx2/logmsg.c: New file.
	* src/libsphinx2/include/logmsg.h: New file.

	* src/libsphinx2/err.c: Control verbosity.
	* src/libsphinx2/fbs_main.c: Add '-verbose' command-line option
	and verbosity_level global.  Change default for print_back_trace
	to false, in keeping with the principle of least verbosity.  Also
	use log_foo() instead of printf().
	* src/libsphinx2/cep_rw.c: Use log_foo() instead of printf() and
	remove extraneous fflush()es.
	* src/libsphinx2/dict.c: Likewise.
	* src/libsphinx2/hmm_tied_r.c: Likewise.
	* src/libsphinx2/kb_main.c: Likewise.
	* src/libsphinx2/live_norm.c: Likewise.
	* src/libsphinx2/lm_3g.c: Likewise.
	* src/libsphinx2/phone.c: Likewise.
	* src/libsphinx2/sc_vq.c: Likewise.
	* src/libsphinx2/search.c: Likewise.
	* src/libsphinx2/searchlat.c: Likewise.
	* src/libsphinx2/time_align.c: Likewise.
	* src/libsphinx2/uttproc.c: Likewise.

	* src/libsphinx2ad/ad_oss.c: Frob the input gain (possibly too
	much), not the microphone output level.

-------------------------------------------------------------------------------

2001-01-26  Kevin A. Lenzo <lenzo@cs.cmu.edu>
	* Integrated some comments and code from Heidi J. Fox
	to make things work under solaris (not yet completed,
	but someone can take another shot at it now)

2001-03-30 Kevin A. Lenzo <lenzo@cs.cmu.edu> 
	* added <string.h> to fe_interface.c and uttproc.c
	* re-included the win32 tree in dist (thanks to wei xu)